# decision-transformer

./: .env  .gitignore  conda_env.yml  create_dataset.py  default.nix  flake.nix  pyproject.toml  result  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: fj7xz1cv9c8nrvdyd6bxhwq3l55k47xc-source  nm3q82wv802p5a2izzbqx4x5whyyaxgg-source
atari/: .envrc  .gitignore  flake.nix  python-overlay.nix  python-overrides.nix  run_dt_atari.py
atari/mingpt/: model_atari.py  trainer_atari.py  utils.py
dt/: decision_transformer_atari.py  main.py  trainer.py  utils.py
gym/: experiment.py
gym/data/: download_d4rl_datasets.py
gym/decision_transformer/evaluation/: evaluate_episodes.py
gym/decision_transformer/models/: decision_transformer.py  trajectory_gpt2.py
gym/decision_transformer/training/: trainer.py
src/dt/: decision_transformer_atari.py  main.py
