[tool.poetry]
name = "dt"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Cython = "^0.29.30"
torch = [
    {platform = 'darwin', url =  "https://download.pytorch.org/whl/cpu/torch-1.9.1-cp39-none-macosx_10_9_x86_64.whl"},
    {platform = 'linux', url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"}
]
transformers = "^4.20.1"
numpy = "^1.23.0"
dollar-lambda = "^1.1.3"
gym = {version = "^0.24.1", extras = ["atari", "accept-rom-license"]}
AutoROM = "^0.4.2"
atari-py = "^0.3.0"
opencv-python = "^4.6.0"
Pillow = "^9.1.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
